--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Patches</title>
     <link rel="stylesheet" href="src/css/styles.css" />
+        <script src="src/javascript/script.js" defer></script>
     <link rel="icon" type="image/x-icon" href="src/img/logo5b.ico" />
   </head>
   <body>
@@ -96,6 +97,5 @@
       <img class="modal-content" id="modalImage" />
       <div id="caption"></div>
     </div>
-    <script src="src/javascript/script.js"></script>
   </body>
 </html>
