--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="home-content">
         <h1>Welcome to my portfolio!</h1>
         <p>
-          I’m placeholder<strong>aka placeholder</strong>, a designer who loves
+          I’m Eduardo<strong>aka Patches</strong>, a designer who loves
           experimenting with new visual styles and turning any idea into
           something tangible (even if they don’t always work out). <br /><br />
           While the site <strong>is still under construction</strong>, feel free
@@ -89,7 +89,7 @@
         If you'd like to learn more about how we can collaborate, don’t hesitate
         to get in touch. I’m always looking for new creative challenges!
       </p>
-      <p><strong>placeholder@placeholder.com</strong></p>
+      <p><strong>eas.graphicdesigner@gmail.com</strong></p>
     </section>
 
     <div id="modal" class="modal">
