--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         broadcasted on TV Cultura. <br /><br />Created 3D low-poly graphic
         assets focused on games, but also for other media such as social
         networks and advertisements.<br /><br />I am now focused on delivering
-        the best experience in UI and UX design by creating website prototypes.
+        the best experience in UI/UX design by creating website prototypes.
       </p>
     </section>
 
