--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Portfolio Patches</title>
     <link rel="stylesheet" href="src/css/styles.css" />
-        <script src="src/javascript/script.js" defer></script>
+    <script src="src/javascript/script.js" defer></script>
     <link rel="icon" type="image/x-icon" href="src/img/logo5b.ico" />
   </head>
   <body>
@@ -50,7 +50,7 @@
         broadcasted on TV Cultura. <br /><br />Created 3D low-poly graphic
         assets focused on games, but also for other media such as social
         networks and advertisements.<br /><br />I am now focused on delivering
-        the best experience in UI/UX design by creating website prototypes.
+        the best experience in UI and UX design by creating website prototypes.
       </p>
     </section>
 
