--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Portfolio Patches</title>
     <link rel="stylesheet" href="src/css/styles.css" />
     <script src="src/javascript/script.js" defer></script>
-    <link rel="icon" type="image/x-icon" href="src/img/logo5b.ico" />
+    <link rel="icon" type="image/x-icon" href="src/img/logo5b.png" />
   </head>
   <body>
     <header>
